--- a/styles/sass/partials/_preset-manager.scss
+++ b/styles/sass/partials/_preset-manager.scss
@@ -593,7 +593,11 @@ div.preset-manager-panel .colors_settings_item .element-toggled.two:nth-child(ev
 	border-left: 2px solid #dae6f2;
 	padding: 5px 0px 5px 10px;
 	position: relative;
-	top: 0px;
+	top: 5px;
+}
+div.preset-manager-panel .colors_settings_item .element-toggled.two {
+	top: 8px;
+	position: relative;
 }
 div.preset-manager-panel .colors_settings_item .element-toggled.two:nth-child(even) { 
 	clear: left;
@@ -606,7 +610,6 @@ div.preset-manager-panel .typography_settings_item .element-toggled.weightStyle 
 	width: 213px !important;
 }
 div.preset-manager-panel .typography_settings_item label {
-	top: 4px;
 	position: relative;
 }
 div.preset-manager-panel .useTypography .upfront-field-multiple-selected {
@@ -620,7 +623,7 @@ div.preset-manager-panel .border-with-fields {
 }
 div.preset-manager-panel .border_selectElement {
 	width: 145px;
-	z-index: 99999;
+	z-index: 9;
 	position: relative;
 	margin-bottom: -34px;
 	margin-left: 80px;
@@ -629,4 +632,7 @@ div.preset-manager-panel .border_selectElement {
 
 div.preset-manager-panel .upfront-settings-css {
 	padding-bottom: 15px;
+}
+div.preset-manager-panel .upfront-settings-item-title {
+	line-height: 22px;
 }
